--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -1,6 +1,6 @@
-<nav class="flex justify-between p-10 w-full mx-auto">
+<nav class="flex justify-between p-10 w-full mx-auto flex-col md:flex-row gap-4">
   <a href="/">Joshua Ryan Butler</a>
-  <div class="flex flex-end gap-4">
+  <div class="flex flex-end md:gap-8 flex-col md:flex-row">
     <a class="nav-link" href="/about">About</a>
     <a class="nav-link" href="/books">Books</a>
     <a class="nav-link" href="/speaking">Speaking</a>
@@ -13,6 +13,7 @@
     font-size: 1.25rem;
     font-weight: bold;
   }
+  
   nav > a {
     font-family: "Rubik", sans-serif;
     font-weight: bold;
