--- a/src/pages/speaking.astro
+++ b/src/pages/speaking.astro
@@ -3,7 +3,14 @@ import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout title="Speaking">
-	<main class="font-body text-2xl font-medium">
+	<main class="font-serif text-2xl font-medium">
 		<h1>Speaking</h1>
 	</main>
 </Layout>
+
+<style>
+  main {
+    margin: auto;
+    max-width: 95ch;
+  }
+</style>
