--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -7,3 +7,10 @@ import Layout from '../layouts/Layout.astro';
 		<h1>Blog</h1>
 	</main>
 </Layout>
+
+<style>
+  main {
+    margin: auto;
+    max-width: 95ch;
+  }
+</style>
