--- a/src/layouts/Page.astro
+++ b/src/layouts/Page.astro
@@ -9,7 +9,7 @@ const title = Astro.props.title || Astro.props.frontmatter.title || "Untitled";
     <main class="page-content">
       <slot />
     </main>
-    <aside>
+    <aside class="sticky top-10 self-start grid gap-10">
       <slot name="aside" />
     </aside>
   </div>
