--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -6,7 +6,7 @@ import Page from "../layouts/Page.astro";
 import { getPosts } from "../utils/getPosts";
 import { books } from "./books.astro";
 
-export const { posts } = await getPosts();
+const { posts } = await getPosts();
 ---
 
 <Page title="Blog">
