--- a/src/pages/[post].astro
+++ b/src/pages/[post].astro
@@ -1,4 +1,5 @@
 ---
+import { getRuntime } from "@astrojs/cloudflare/runtime";
 import EmailWidget from "../components/EmailWidget.astro";
 import RecentPosts from "../components/RecentPosts.astro";
 import Page from "../layouts/Page.astro";
@@ -6,7 +7,7 @@ import getPost from "../utils/getPost";
 import sanitize from "../utils/sanitize";
 
 const slug = Astro.params.post || "";
-const post = await getPost(slug);
+const post = await getPost(slug, getRuntime(Astro.request));
 
 if (!post) {
   return Astro.response(404, "Not Found");
