--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -5,8 +5,10 @@ import TableOfContents from "../components/TableOfContents.astro";
 import Page from "../layouts/Page.astro";
 import { getPosts } from "../utils/getPosts";
 import { books } from "./books.astro";
+import { getRuntime } from "@astrojs/cloudflare/runtime";
 
-const { posts } = await getPosts();
+const postData = await getPosts(getRuntime(Astro.request));
+const posts = postData?.posts || [];
 ---
 
 <Page title="Blog">
