--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import { getRuntime } from "@astrojs/cloudflare/runtime";
 import Book from "../components/Book.astro";
 import Callout from "../components/Callout.astro";
 import HeroSection from "../components/HeroSection.astro";
@@ -34,7 +35,8 @@ const books = [
   },
 ];
 
-const {recentPosts} = await getPosts()
+const postData = await getPosts(getRuntime(Astro.request));
+const recentPosts = postData?.recentPosts || [];
 ---
 
 <Layout title="Josh Butler">
