Remove form after successful signup

--- a/src/components/Callout.astro
+++ b/src/components/Callout.astro
@@ -15,7 +15,9 @@ import EmailSignup from "./EmailSignup.astro";
         alt="Beautiful Union"
       />
     </figure>
-    <div class="w-full grid grid-rows-[1fr_auto] items-between order-1 md:order-2">
+    <div
+      class="w-full grid grid-rows-[1fr_auto] items-between order-1 md:order-2"
+    >
       <div>
         <h3 class="font-light mb-8">
           My Latest Book: <b>Beautiful Union</b>
@@ -25,7 +27,7 @@ import EmailSignup from "./EmailSignup.astro";
           (sort of) explains everything.
         </p>
       </div>
-      <div class="grid gap-8 mt-6">
+      <div class="grid gap-8 mt-6 email-signup-wrapper">
         <p class="text-lg">Download <b>Chapter 1</b> for free</p>
         <EmailSignup />
       </div>
