--- a/src/components/EmailWidget.astro
+++ b/src/components/EmailWidget.astro
@@ -4,6 +4,10 @@ import EmailSignup from "./EmailSignup.astro";
 
 <div class="grid gap-8">
   <h4>Newsletter</h4>
-  <p class="text-xl">Get early previews of some of my posts and book content.</p>
-  <EmailSignup />
+  <div class="email-signup-wrapper">
+    <p class="text-xl">
+      Get early previews of some of my posts and book content.
+    </p>
+    <EmailSignup />
+  </div>
 </div>
