--- a/src/components/EmailSignup.astro
+++ b/src/components/EmailSignup.astro
@@ -2,7 +2,7 @@
 import Input from "./Input.astro";
 ---
 
-<form class="relative flex items-center" action="/email-signup" method="post">
+<form class="relative flex items-center" action="/api/email-signup" method="post">
   <Input
     type="email"
     name="email"
