--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,9 +3,11 @@ import Footer from "../components/Footer.astro";
 import NavBar from "../components/NavBar.astro";
 export interface Props {
   title: string;
+  description: string;
+  slug: string;
 }
 
-const { title } = Astro.props;
+const { title, description, slug } = Astro.props;
 ---
 
 <!DOCTYPE html>
@@ -28,7 +30,32 @@ const { title } = Astro.props;
       rel="stylesheet"
     />
     <meta name="generator" content={Astro.generator} />
+
     <title>{title}</title>
+    <!-- Primary Meta Tags -->
+    <title>{title}</title>
+    <meta name="title" content={title} />
+    <meta name="description" content={description} />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content={Astro.url.href} />
+    <meta property="og:title" content={title} />
+    <meta property="og:description" content={description} />
+    <meta
+      property="og:image"
+      content={`${Astro.url.origin}/meta/${slug}.png`}
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content={Astro.url.href} />
+    <meta property="twitter:title" content={title} />
+    <meta property="twitter:description" content={description} />
+    <meta
+      property="twitter:image"
+      content={`${Astro.url.origin}/meta/${slug}.png`}
+    />
   </head>
   <body class="text-2xl">
     <header class="bg-[var(--bg-alt)]">
