--- a/src/components/RecentPosts.astro
+++ b/src/components/RecentPosts.astro
@@ -1,6 +1,4 @@
 ---
-import sanitize from "../utils/sanitize";
-
 const { posts } = Astro.props;
 ---
 
@@ -8,15 +6,13 @@ const { posts } = Astro.props;
   <h4>Recent Posts</h4>
   <ul class="grid gap-6">
     {
-      posts.map(
-        ({ slug, title }: { slug: string; title: string; }) => (
-          <li>
-            <a class="underline text-xl" href={slug}>
-              {sanitize(title)}
-            </a>
-          </li>
-        )
-      )
+      posts.map(({ slug, title }: { slug: string; title: string }) => (
+        <li>
+          <a class="underline text-xl" href={slug}>
+            {title}
+          </a>
+        </li>
+      ))
     }
   </ul>
   <a class="text-xl font-bold underline" href="/blog">More</a>
