--- a/src/components/Callout.astro
+++ b/src/components/Callout.astro
@@ -2,7 +2,7 @@
 import EmailSignup from "./EmailSignup.astro";
 ---
 
-<section class="dot-bg p-6 lg:p-20 -mx-10 lg:-mx-20 my-20">
+<div class="dot-bg p-6 lg:p-20 -mx-10 lg:-mx-20 my-20">
   <article
     id="latest-work"
     class="bg-[var(--light-blue)] p-8 lg:p-20 w-full grid md:grid-cols-[250px_1fr] gap-20"
@@ -33,4 +33,4 @@ import EmailSignup from "./EmailSignup.astro";
       </div>
     </div>
   </article>
-</section>
+</div>
