--- a/src/components/PostLinks.astro
+++ b/src/components/PostLinks.astro
@@ -3,7 +3,7 @@ const { posts } = Astro.props;
 ---
 
 <ul class="!ml-0 grid gap-10">
-  <li class="grid grid-cols-[140px_1fr] font-sans text-base">
+  <li class="hidden lg:grid grid-cols-[140px_1fr] font-sans text-base">
     <span class="font-sans">Date</span>
     <span>Title</span>
   </li>
@@ -19,7 +19,7 @@ const { posts } = Astro.props;
         title: string;
       }) => {
         return (
-          <li class="grid grid-cols-[140px_1fr] items-baseline">
+          <li class="grid lg:grid-cols-[140px_1fr] items-baseline">
             <time
               class="font-sans text-base"
               datetime={new Date(date).toISOString()}
