--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -64,7 +64,7 @@ const { title, description, slug } = Astro.props;
         <slot name="header" />
       </div>
     </header>
-    <div class="font-serif font-medium outer-container">
+    <div class="font-serif font-medium relative">
       <slot />
     </div>
     <Footer />
