--- a/src/layouts/Page.astro
+++ b/src/layouts/Page.astro
@@ -30,7 +30,7 @@ const slug = Astro.props?.slug || Astro.props.frontmatter?.slug;
     }
     <h1>{title}</h1>
   </div>
-  <div class="grid md:grid-cols-[1fr_300px] gap-20 py-20 min-w-0">
+  <div class="grid md:grid-cols-[1fr_300px] gap-20 py-20 min-w-0 outer-container">
     <main class="page-content">
       <slot />
     </main>
