--- a/src/pages/books.astro
+++ b/src/pages/books.astro
@@ -35,7 +35,7 @@ export const books = [
 ];
 ---
 
-<Page title={title}>
+<Page title={title} description="Books by Joshua Ryan Butler" slug="books">
   <TableOfContents slot="aside" links={books} title="Books" />
   <EmailWidget slot="aside" />
   <div class="grid gap-[120px]">
