--- a/src/pages/books.astro
+++ b/src/pages/books.astro
@@ -8,26 +8,30 @@ const title = "Books";
 export const books = [
   {
     id: "beautiful-union",
-    src: "/images/beautiful-union-bg.jpg",
+    postImage: "/images/beautiful-union-bg.jpg",
+    featuredImage: "/images/beautiful-union.jpg",
     title: "Beautiful Union",
     description:
       "It's time to better understand God’s redemptive vision for humanity's greatest obsession. In this bold book, award-winning author Joshua Ryan Butler helps listeners rediscover the beauty of the traditional Christian theology of sex by framing it within the greater things it is designed to point to.",
   },
   {
     id: "beautiful-union-study-guide",
-    src: "",
+    postImage: "/images/beautiful-union-study-guide-bg.jpg",
+    featuredImage: "/images/beautiful-union-study-guide.jpg",
     title: "Beautiful Union (Study Guide)",
     description: "",
   },
   {
     id: "the-persuing-god",
-    src: "",
+    postImage: "/images/the-persuing-god-bg.jpg",
+    featuredImage: "/images/the-pursuing-god.jpg",
     title: "The Pursuing God",
     description: "",
   },
   {
     id: "the-skeletons-in-gods-closet",
-    src: "/images/the-skeletons-in-gods-closet-bg.jpg",
+    postImage: "/images/the-skeletons-in-gods-closet-bg.jpg",
+    featuredImage: "/images/the-skeletons-in-gods-closet.jpg",
     title: "The Skeletons in God's Closet",
     description:
       "It's time to better understand God’s redemptive vision for humanity's greatest obsession. In this bold book, award-winning author Joshua Ryan Butler helps listeners rediscover the beauty of the traditional Christian theology of sex by framing it within the greater things it is designed to point to.",
