--- a/src/pages/books.astro
+++ b/src/pages/books.astro
@@ -8,6 +8,7 @@ const title = "Books";
 export const books = [
   {
     id: "beautiful-union",
+    date: "2023",
     postImage: "/images/beautiful-union-bg.jpg",
     featuredImage: "/images/beautiful-union.jpg",
     title: "Beautiful Union",
@@ -16,6 +17,7 @@ export const books = [
   },
   {
     id: "beautiful-union-study-guide",
+    date: "2023",
     postImage: "/images/beautiful-union-study-guide-bg.jpg",
     featuredImage: "/images/beautiful-union-study-guide.jpg",
     title: "Beautiful Union (Study Guide)",
@@ -23,6 +25,7 @@ export const books = [
   },
   {
     id: "the-persuing-god",
+    date: "2016",
     postImage: "/images/the-persuing-god-bg.jpg",
     featuredImage: "/images/the-pursuing-god.jpg",
     title: "The Pursuing God",
@@ -30,6 +33,7 @@ export const books = [
   },
   {
     id: "the-skeletons-in-gods-closet",
+    date: "2015",
     postImage: "/images/the-skeletons-in-gods-closet-bg.jpg",
     featuredImage: "/images/the-skeletons-in-gods-closet.jpg",
     title: "The Skeletons in God's Closet",
