--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,7 +22,7 @@ const description =
     <section class="outer-container">
       <Callout />
     </section>
-    <section class="relative h-[680px]">
+    <section class="relative h-[750px] md:h-[650px]">
       <div class="mb-8 outer-container">
         <h4 class="mb-8">More Books</h4>
         <p class="max-w-[55ch]">
@@ -32,7 +32,7 @@ const description =
         </p>
       </div>
       <div
-        class="absolute w-full bottom-0 overflow-auto lg:pl-[calc((100vw_-_(1120px_-_4rem))_/_2)] pt-40"
+        class="absolute w-full bottom-0 overflow-auto pl-[2rem] lg:pl-[calc((100vw_-_(1120px_-_4rem))_/_2)] pt-40"
       >
         <ul class="inline-flex gap-20 items-center w-full">
           {
