Fix responsive for hero

--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -1,5 +1,5 @@
 <section class="grid md:grid-cols-[1fr_auto] gap-20 py-20 w-full">
-  <div class="grid gap-10">
+  <div class="grid gap-10 order-2 md:order-1">
     <h1>Hi, I'm Josh</h1>
     <p>
       I’m a pastor of <a
@@ -20,7 +20,7 @@
       See my latest work
     </a>
   </div>
-  <figure class="self-center p-0 m-0">
+  <figure class="self-center p-0 m-0 order-1 md:order-2">
     <img
       class="w-full h-auto md:max-w-[400px]"
       src="/images/josh.jpg"
