--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -1,5 +1,5 @@
 <nav
-  class="flex justify-between p-10 w-full mx-auto gap-4 relative"
+  class="flex justify-between p-10 w-full mx-auto gap-4 relative fade-in fast"
 >
   <a href="/">Joshua Ryan Butler</a>
   <div class="hidden md:flex flex-end md:gap-8 flex-col md:flex-row">
