--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -60,11 +60,11 @@ const { title, description, slug } = Astro.props;
   <body class="text-2xl">
     <header class="bg-[var(--bg-alt)]">
       <NavBar />
-      <div class="outer-container">
+      <div class="outer-container fade-in">
         <slot name="header" />
       </div>
     </header>
-    <div class="font-serif font-medium relative">
+    <div class="font-serif font-medium relative fade-in">
       <slot />
     </div>
     <Footer />
@@ -82,6 +82,7 @@ const { title, description, slug } = Astro.props;
     --gold: #d1a15f;
     --light-blue: #f2f3fc;
   }
+
   html {
     font-family: "Crimson Text", serif;
     background-color: #f6f6f6;
@@ -158,5 +159,43 @@ const { title, description, slug } = Astro.props;
           transparent 50%
         )
         top / 12px 12px repeat;
+  }
+
+  .animate-in {
+    animation: animate-in 0.5s ease-out;
+  }
+
+  .fade-in {
+    animation: fade-in 1s ease-out;
+  }
+
+  .fade-in.fast {
+    animation: fade-in .5s ease-out;
+  }
+
+  body:has(input:checked) {
+    overflow: hidden;
+    height: 100vh;
+  }
+
+  @keyframes animate-in {
+    0% {
+      transform: translateY(-40px);
+    }
+    100% {
+      transform: translateY(0px);
+    }
+  }
+
+  @keyframes fade-in {
+    0% {
+      opacity: 0;
+    }
+    50% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
   }
 </style>
